<resources>
    <string name="app_name">My App 6</string>
    <string name="json">Get Json</string>
    <string name="reset">Reset</string>
    <string name="input">all</string>
    <string name="names">Name</string>
    <string name="room">Room</string>
    <string name="price">Price</string>
    <string name="currency"> €</string>
    <string name="show">Show</string>
    <string name="pName">Property Name:</string>
    <string name="pRoom">Property Room:</string>
    <string name="pPrice">Property Price:</string>
    <string name="pState">Property State:</string>
    <string name="pType">Property Type:</string>
    <string name="pInDate">Property In Date:</string>
    <string name="pOutDate">Property Out Date:</string>
    <string name="enter_item">Enter State</string>
    <string name="hint_char">Enter one letter</string>
    <string name="hint_description">Description</string>
    <string name="save">Save</string>
    <string name="hint_innTpye">Enter number</string>
    <string name="enter_type">Enter Type</string>
    <string name="enter_property">Enter Property</string>
    <string name="hint_name">Enter Name</string>
    <string name="hint_room">Enter room</string>
    <string name="hint_price">Enter price</string>
    <string name="hint_inDate">Enter date in format 20201123</string>
    <string name="hint_outDate">Enter date in format 20201123</string>
    <string name="property_id">Id</string>


    <string-array name="states">
        <item>ok</item>
        <item>missing</item>
        <item>removed</item>
        <item>all</item>
        <item>moved</item>
    </string-array>

    <string-array name="objects">
        <item>property</item>
        <item>state</item>
        <item>type</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signIn">Sing in</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="registration">Registration</string>
    <string name="hint_email">Email</string>
    <string name="hint_controlPassword">Repeat password</string>
</resources>
