<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_id"
    >

    <androidx.cardview.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        >
        <RelativeLayout
            android:background="@color/cardview_light_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"

                android:layout_centerHorizontal="true"
                android:text="@string/enter_property">
            </TextView>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:inputType="textPersonName"
                android:layout_below="@id/title"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:layout_below="@id/username"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:hint="@string/hint_password"
                android:layout_below="@id/email"/>

            <EditText
                android:id="@+id/controlPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:hint="@string/hint_controlPassword"
                android:layout_below="@id/password"/>

            <Button
                android:id="@+id/registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_below="@id/controlPassword"
                android:textSize="14sp"
                android:text="@string/save"
                android:textStyle="bold"
                android:enabled="false"
                android:background="@color/colorPrimary"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>