<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_id"
    >

    <androidx.cardview.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        >
        <RelativeLayout
            android:background="@color/cardview_light_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"

                android:layout_centerHorizontal="true"
                android:text="@string/enter_item">
            </TextView>

            <EditText
                android:id="@+id/charState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_char"
                android:maxLength="1"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:layout_below="@id/title"/>

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_description"
                android:layout_below="@id/charState"/>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_below="@id/description"
                android:textSize="14sp"
                android:text="@string/save"
                android:enabled="false"
                android:textStyle="bold"
                android:background="@color/colorPrimary"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>